--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.6
   firebase_auth: ^3.3.4
-  google_sign_in: ^5.2.1
+  uuid: ^3.0.5
+  
   cloud_firestore: ^3.1.5
   firebase_storage: ^10.2.4
   file_picker: ^4.2.8
   shared_preferences: ^2.0.11
+  image_picker: ^0.8.4+5
 
 
 dev_dependencies:
